# utils

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt
cmake/: .clang-format  clang-dev-tools.cmake
include/config/: Configuration.hpp
src/: CMakeLists.txt
src/config/: CMakeLists.txt  Configuration.cpp
unit-test/unit-test-config/: CMakeLists.txt  ConfigTest.cpp
